- new configs and dashboards for Exagate

--- a/conf-telegraf/starlark/starlark_processor-only-elemy.conf
+++ b/conf-telegraf/starlark/starlark_processor-only-elemy.conf
@@ -19,6 +19,10 @@ def apply(metric):
   #for k in metric.fields:
   #  log.debug(k)
     
+#  for k in metric.fields:
+#    log.debug(k)
+   #	pass
+   # log.debug(metric.fields[str(k)])
   
   if metric.tags.get('name') == "CCU-1001" and "elmCcuDoCurState" in metric.fields and "index" in metric.tags:
     index_str=metric.tags["index"]
