-add link to github

--- a/conf-telegraf/default-sensors/anysensor-modbus-tcp-localhost.conf
+++ b/conf-telegraf/default-sensors/anysensor-modbus-tcp-localhost.conf
@@ -1,4 +1,7 @@
 ## Any sensor with address=1. hold-register=0 (first) on localhost
+
+# All Teletraf configs and Grafana dashboards: https://github.com/lab240/telegraf-grafana-configs
+
 [[inputs.modbus]]
   
   #change name="YOUR_SENSOR" and measurement="YOUR_SENSOR"
