--- a/conf-telegraf/default-sensors/anysensor-modbus-ttyS3.conf
+++ b/conf-telegraf/default-sensors/anysensor-modbus-ttyS3.conf
@@ -1,6 +1,8 @@
 ## Any sensor with address=1. hold-register=0 (first) on /dev/ttyS3 (FCC device) with 9600\8n1 (sensor parameter)
-[[inputs.modbus]]
 
+# All Teletraf configs and Grafana dashboards: https://github.com/lab240/telegraf-grafana-configs
+
+[[inputs.modbus]]
 
   #change name="YOUR_SENSOR" and measurement="YOUR_SENSOR"
   
