- sensors bmp280 and bme280 are separated

--- a/conf-telegraf/i2c/bme280/bme280_exec.conf
+++ b/conf-telegraf/i2c/bme280/bme280_exec.conf
@@ -1,9 +1,13 @@
-## BMP1750 lux meter
+#Bme280 sensor
 # get python script 
 # from repo https://github.com/lab240/napi-scripts
 # path to scripts: https://github.com/lab240/napi-scripts/tree/main/sensors/py
 
+        
 [[inputs.exec]]
-  commands = ["python3 <path>/napi_sci_bh1750.py --influx-output"]
+  #command = ["command"]
+  #Some Examples
+  commands = ["python3 <path>/napi_sci_bme280.py --influx-output"]
+  #commands = ["sh /tmp/test.sh"]
   timeout = "5s"
   data_format = "influx"
