--- a/conf-telegraf/i2c/bmp280/bmp280_exec.conf
+++ b/conf-telegraf/i2c/bmp280/bmp280_exec.conf
@@ -1,9 +1,13 @@
-#Bmp280 sensor
+#Bme280 sensor
+# get python script 
+# from repo https://github.com/lab240/napi-scripts
+# path to scripts: https://github.com/lab240/napi-scripts/tree/main/sensors/py
+
         
 [[inputs.exec]]
   #command = ["command"]
   #Some Examples
-  commands = ["python3 /home/root/napisci-main/src/napi_sci_bmp280.py --influx-output"]
+  commands = ["python3 <path>/napi_sci_bmp280.py --influx-output"]
   #commands = ["sh /tmp/test.sh"]
   timeout = "5s"
   data_format = "influx"
