--- a/conf-telegraf/ICD-DAS/CL-213-E/DL-213E-mqtt.conf
+++ b/conf-telegraf/ICD-DAS/CL-213-E/DL-213E-mqtt.conf
@@ -1,18 +1,29 @@
 ## ICPDAS DL-213E (CO\CO2\PM2.5\Temp\Humidity) MQTT
 
 [[inputs.mqtt_consumer]]
-  servers = ["tcp://MQTT_SERVER:1883"]
+  servers = ["tcp://IP:1883"]
 
+  topics = [
+      "sensors/CL213E/CO",
+      "sensors/CL213E/CO2",
+      "sensors/CL213E/PM25",
+      "sensors/CL213E/RH",
+      "sensors/CL213E/TC",
+      "sensors/CL213E/DC"
+  ]
 
-  topic_tag = ""
-
-  username = "mqtt_user"
-  password = "xxxmqtt_pass"
+  username = "user_name"
+  password = "mqtt_pass"
 
 
   data_format = "value"
   data_type = "float"
 
+  [[processors.pivot]]
+    tag_key = "field"
+    value_key = "value"
+
   [[inputs.mqtt_consumer.topic_parsing]]
-    topic = "+/+/+"
-    tags = "type/se
+    topic = "sensors/+/+"
+    tags = "_/sensor/field"
+    measurement = "_/measurement/_"
